--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "build": "tsup src --out-dir build",
-    "start": "node build/server.js"
+    "start": "node build/server.js",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "keywords": [],
   "author": "",
@@ -14,10 +18,14 @@
   "devDependencies": {
     "@types/bcryptjs": "2.4.2",
     "@types/node": "18.14.6",
+    "@vitest/coverage-c8": "0.29.2",
+    "@vitest/ui": "0.29.2",
     "prisma": "4.11.0",
     "tsup": "6.6.3",
     "tsx": "3.12.3",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "vite-tsconfig-paths": "4.0.5",
+    "vitest": "0.29.2"
   },
   "dependencies": {
     "@prisma/client": "4.11.0",
