--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "vitest": "0.29.2"
   },
   "dependencies": {
+    "@fastify/cookie": "8.3.0",
     "@fastify/jwt": "6.7.0",
     "@prisma/client": "4.11.0",
     "@types/supertest": "2.0.12",
